# sample-task

./: CMakeLists.txt  README.md  main.cpp
provider/: pointsprovider.cpp  pointsprovider.h  pointsprovider_p.h  randompointsprovider.cpp  randompointsprovider.h
resources/: resources.qrc
widgets/: randomscatterwidget.cpp  randomscatterwidget.h  randomscatterwidget_p.h  stratachartwindow.cpp  stratachartwindow.h  stratachartwindow_p.h
